# miaowu-os

./: .gitignore  AGENTS.md  AI_Novel_Connection_Test_Report.md  AI模型调用机制与配置权限问题分析报告.md  CODE_REVIEW_REPORT.md  Miaowu_OS_Next_Phase_Strategy_Report_2026.md  Novel_Agent_Settings_Implementation_Plan.md  Novel_Creation_Process_Assessment_Report.md  Novel_Discussion_Summary.md  code_audit_report_20260430.md  connection_test_report_20260420_210451.txt  novel-tool-gap-analysis.md  test_ai_novel_connection.py  主项目写作流程与小说创作深度联动打通方案.md  代码审计修复执行报告_2026-04-19.md  代码审计报告_2026-04-19.md  代码审计报告_交叉验证_2026-04-19.md  小说功能同类问题排查与代码审查报告_2026-04-18.md  小说功能完整迁移方案_2026-04-18.md  小说功能对比分析文档.md  小说工作室前端UI功能实现问题诊断报告.md  小说工作室前端功能补全实施方案上下文.md  小说提示词模板系统排查报告.md  小说提示词模板系统移植完成度检查报告.md  小说缺失功能1比1迁移脑暴文档.md  新建 文本文档.txt  账号实现讨论.md
deer-flow-main/backend/: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  debug.py  langgraph.json  pyproject.toml  ruff.toml
deer-flow-main/backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTH_TEST_DOCKER_GAP.md  AUTH_TEST_PLAN.md  AUTH_UPGRADE.md  AUTO_TITLE_GENERATION.md  CONFIGURATION.md  FILE_UPLOAD.md  GUARDRAILS.md  HARNESS_APP_SPLIT.md  MCP_SERVER.md  MEMORY_IMPROVEMENTS.md  MEMORY_IMPROVEMENTS_SUMMARY.md  MEMORY_SETTINGS_REVIEW.md  NOVEL_OBSERVABILITY_ROLLBACK_RUNBOOK.md  PATH_EXAMPLES.md  README.md  SETUP.md  STREAMING.md  TITLE_GENERATION_IMPLEMENTATION.md  TODO.md  memory-settings-sample.json  middleware-execution-flow.md  plan_mode_usage.md  rfc-create-deerflow-agent.md  rfc-extract-shared-modules.md  rfc-grep-glob-tools.md  summarization.md  task_tool_improvements.md
deer-flow-main/backend/scripts/: build-desktop-backend.ps1  evaluate_intent_decisions.py  migrate_user_isolation.py  reset_novel_file_truth_db.py
deer-flow-main/backend/tests/: _router_auth_helpers.py  conftest.py  test_acp_config.py  test_ai_provider_intent_routing.py  test_ai_provider_messages_error_handling.py  test_ai_provider_observability.py  test_auth.py  (+218 more)
(+1432 files in other folders)
